Add patient arrival lead setting
